k8s/Deployment_apps_v1_mpizarro-dev_my-streama.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    meta.helm.sh/release-name: my-streama
    meta.helm.sh/release-namespace: mpizarro-dev
  labels:
    app.kubernetes.io/instance: my-streama
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: streama
    app.kubernetes.io/version: 1.10.4
    helm.sh/chart: streama-1.0.1
  name: my-streama
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: my-streama
      app.kubernetes.io/name: streama
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: my-streama
        app.kubernetes.io/name: streama
    spec:
      containers:
      - env:
        - name: STREAMA_MYSQL_HOST
          value: my-streama-mysql
        - name: STREAMA_MYSQL_PORT
          value: "3306"
        - name: STREAMA_MYSQL_DB
          value: streama
        - name: STREAMA_MYSQL_USER
          value: streama
        - name: STREAMA_MYSQL_PASSWORD
          valueFrom:
            secretKeyRef:
              key: mysql-password
              name: my-streama-mysql
        image: docker.io/just1not2/streama:1.10.4
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: streama-http
            scheme: HTTP
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        name: streama
        ports:
        - containerPort: 8080
          name: streama-http
          protocol: TCP
        readinessProbe:
          failureThreshold: 2
          httpGet:
            path: /
            port: streama-http
            scheme: HTTP
          periodSeconds: 2
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 700m
            memory: 1536Mi
          requests:
            cpu: 500m
            memory: 1Gi
        startupProbe:
          failureThreshold: 60
          httpGet:
            path: /
            port: streama-http
            scheme: HTTP
          periodSeconds: 2
          successThreshold: 1
          timeoutSeconds: 5
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data/streama
          name: streama-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: streama
      serviceAccountName: streama
      terminationGracePeriodSeconds: 30
      volumes:
      - name: streama-data
        persistentVolumeClaim:
          claimName: my-streama
