k8s/Service__v1_mpizarro-dev_my-streama-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: my-streama
    meta.helm.sh/release-namespace: mpizarro-dev
  labels:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: my-streama
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mysql
    helm.sh/chart: mysql-8.8.26
  name: my-streama-mysql
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: mysql
    port: 3306
    protocol: TCP
    targetPort: mysql
  selector:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: my-streama
    app.kubernetes.io/name: mysql
  sessionAffinity: None
  type: ClusterIP
