k8s/Service__v1_mpizarro-dev_my-streama.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: my-streama
    meta.helm.sh/release-namespace: mpizarro-dev
  labels:
    app.kubernetes.io/instance: my-streama
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: streama
    app.kubernetes.io/version: 1.10.4
    helm.sh/chart: streama-1.0.1
  name: my-streama
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: streama-http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/instance: my-streama
    app.kubernetes.io/name: streama
  sessionAffinity: None
  type: ClusterIP
