k8s/Route_route.openshift.io_v1_mpizarro-dev_maxvideo.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/instance: my-streama
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: streama
    app.kubernetes.io/version: 1.10.4
    helm.sh/chart: streama-1.0.1
  name: maxvideo
spec:
  port:
    targetPort: streama-http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: my-streama
    weight: 100
  wildcardPolicy: None
